tui/tests/snapshots/prompt__interact_under_pty__default_selects_metro.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ○ [b] bike
  ● [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
cancelled
