tui/tests/snapshots/prompt__interact_under_pty__ignores_non_hotkey_then_confirms.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● [b] bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option
  ● [b] bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (bike) ✓
confirmed: Bike
